--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -591,6 +591,10 @@ input[type="radio"]:checked + label.button {
   opacity: 1;
 }
 
+.word {
+  white-space: nowrap;
+}
+
 #services,
 #cases,
 #about {
